--- a/software/docs/energy_storage.bib
+++ b/software/docs/energy_storage.bib
@@ -1727,7 +1727,7 @@ The Avedøre Power Station was designed by the architects Claus Bjarrum and Jør
 @article{er-rbibModellingSimulationMethanation2013,
 	title = {Modelling and simulation of methanation catalytic reactor for renewable electricity storage},
 	journal = {Chemical engineering transactions},
-	author = {Er-rbib, Hanaâ and Bouallou, Chakib},
+	author = {Er-rbib, Hanaa and Bouallou, Chakib},
 	year = {2013},
 	file = {Er-rbib_Bouallou_2013_Modelling and simulation of methanation catalytic reactor for renewable.pdf:/home/ali/Dropbox/Zotero/Er-rbib_Bouallou_2013_Modelling and simulation of methanation catalytic reactor for renewable.pdf:application/pdf}
 }
