--- a/papers/ECOS_2021-subsurface-storage-paper-v03.tex
+++ b/papers/ECOS_2021-subsurface-storage-paper-v03.tex
@@ -41,7 +41,9 @@ Simultaneously, the existing and in development offshore windmills
 in the North Sea will ensure the availability of abundant and cheap
 electricity in the region yet fail to address the intermittent nature
 of the wind resources. This paper hypothesizes that the surplus electricity
-in the windy days and off-peak time can be converted to chemical (synthetic fuels, e.g., hydrogen, ammonia, methanol, or methane) forms and stored in the vast space of the abandoned
+in the windy days and off-peak time can be converted to chemical forms 
+(synthetic fuels, e.g., hydrogen, ammonia, methanol, or methane) 
+and stored in the vast space of the abandoned
 oil and gas reservoirs under the North Sea. The stored energy can
 be extracted and consumed as carbon-neutral fuels or converted
 back to electricity when there is a shortage of wind. This work studies
@@ -54,15 +56,19 @@ equipment for the conversion of electricity to chemical
 storable forms. Several processes including nitrogen and carbon dioxide
 separation from the atmosphere, electrolysis of seawater, and reduction
 of CO$_{2}$ and N$_{2}$ to synthetic fuels are simulated in a commercial
-process simulator. The simulation results are used for the sizing
-of process equipment and the calculation of required platform area.
-The thermodynamic analysis quantifies the exergy loss during the offshore
-conversion, transportation, and storage/extraction of chemical energy in the reservoirs based on the results of an in-house
-opensource dynamic model that simulates the multi-component non-isothermal
-flow of fluids in the subsurface. The results will finally estimate
-the amount of wind electricity, offshore installations, and subsurface
-space that is required to make Denmark self-sufficient and independent
-of fossil fuels.}
+process simulator. The thermodynamic analysis quantifies the exergy loss during the offshore
+conversion and storage/extraction of chemical energy in the 
+reservoirs based on the results of an in-house
+open-source dynamic model that simulates the multi-component non-isothermal
+flow of fluids in the subsurface. The results show that the gas reservoirs with 
+a higher permeability can store the large amount of energy that is required to 
+address the wind energy fluctuation. However, depending on the future supply of wind electricity, 
+a large energy loss in the process should be expected. Several technical problems regarding 
+the electrolysis capacity, hydrogen turbines, and efficiency of compressors need to be addressed. 
+Moreover, the estimated discharge rate from the subsurface storage can be too slow for addressing 
+urgent surges of the electricity demand. Offshore subsurface storage seems to be a solution 
+for the storage of chemicals to be used as transport fuel or raw materials. 
+}
 
 \keywords{\normalsize Thermodynamic analysis, Electricity to fuel, energy storage, Energy transition}
 
@@ -79,7 +85,11 @@ of one million European citizens. There were reports of significant
 curtailments up to several thousand MW from other countries in the
 North Sea region. Curtailment \cite{lewWindSolarCurtailment2013},
 which means accepting less renewable electricity than what windfarms
-can deliver is another word for wasted resources. these large amounts of wasted resources can be converted to nonvolatile chemical energy and stored in large subsurface reservoirs; how fast the energy can be converted and stored, how fast it can be reproduced, and how much of will be wasted in the process are the questions that will be answered in this work. 
+can deliver is another word for wasted resources. these large amounts of 
+wasted resources can be converted to nonvolatile chemical energy and stored 
+in large subsurface reservoirs; how fast the energy can be converted and stored, 
+how fast it can be reproduced, and how much of will be wasted in the process are 
+the questions that will be answered in this work. 
 The waste of energy from the windmills will soon become
 more severe when the North Sea is hit by a technological storm in
 the form of several large wind farms that are currently evaluated,
